--- a/mail-vue/index.html
+++ b/mail-vue/index.html
@@ -118,5 +118,6 @@
 </div>
 <div id="app"></div>
 <script type="module" src="/src/main.js"></script>
+<script defer src="https://umami.zhengshangchen.top/script.js" data-website-id="042dec2b-d5ea-44b2-90c5-2911d1cf371b"></script>
 </body>
 </html>
